--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>근태관리_로그인</title>
+    <link rel="stylesheet" href="/static/css/styles.css" />
 </head>
 <body>
+<div class="login-container">
+    <div class="login-box">
+        <img src="/static/images/logo.png" alt="GGM 로고" class="logo" />
+        <h1>ESS시스템</h1>
+        <form>
+            <input type="text" placeholder="ID" required />
+            <input type="password" placeholder="Password" required />
+        </form>
+        <button type="submit">Login</button>
 
+    </div>
+    <p class="info">본 시스템은 <span>Chrome</span> 브라우저와 <span>1920×1080</span> 해상도에 최적화되어 있습니다.</p>
+    <p class="copyright">Copyright © 2020 Gwangju Global Motors Co., Ltd. All Rights Reserved.</p>
+</div>
 </body>
 </html>
