--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>근태관리_로그인</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../static/css/styles.css">
 </head>
-<body>
+<body class="login-page"> <!-- body에 고유 클래스 추가 -->
 <div class="login-container">
     <div class="login-box">
-        <img src="/images/logo.png" alt="GGM 로고" class="logo" />
+        <img src="../static/images/logo.png" alt="GGM 로고" class="logo" />
         <h1>ESS시스템</h1>
         <form action="/login" method="post">
             <input type="text" name="empCode" placeholder="ID" required />
