--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -4,8 +4,8 @@
         <a th:href="@{/pattern/main}">근태 패턴</a>
         <button class="dropdown-btn">근태신청 및 내역</button>
         <div class="dropdown-container">
-            <a href="#">일반근태 신청</a>
-            <a href="#">기타근태 신청</a>
+            <a th:href="@{/att/general}">일반근태 신청</a>
+            <a th:href="@{/att/etc}">기타근태 신청</a>
         </div>
         <a href="#">일근태 승인</a>
     </div>
