--- a/src/main/resources/templates/dept/detail.html
+++ b/src/main/resources/templates/dept/detail.html
@@ -117,9 +117,9 @@
                                 <thead>
                                 <tr>
                                     <th></th>
-                                    <th>사원 코드</th>
+                                    <th>사원 번호</th>
                                     <th>사원 이름</th>
-                                    <th>직위 코드</th>
+                                    <th>직위</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -127,7 +127,7 @@
                                     <td><input type="checkbox" name="empCodes" th:value="${emp.empCode}"/></td>
                                     <td th:text="${emp.empCode}">E001</td>
                                     <td th:text="${emp.empName}">홍길동</td>
-                                    <td th:text="${emp.positionCode}">P1001</td>
+                                    <td th:text="${emp.positionName}">P1001</td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -148,9 +148,9 @@
                                 <thead>
                                 <tr>
                                     <th></th>
-                                    <th>사원 코드</th>
+                                    <th>사원 번호</th>
                                     <th>사원 이름</th>
-                                    <th>직위 코드</th>
+                                    <th>직위</th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -158,7 +158,7 @@
                                     <td><input type="checkbox" name="empCodes" th:value="${emp.empCode}"/></td>
                                     <td th:text="${emp.empCode}">E999</td>
                                     <td th:text="${emp.empName}">김무소속</td>
-                                    <td th:text="${emp.positionCode}">P0000</td>
+                                    <td th:text="${emp.positionName}">P0000</td>
                                 </tr>
                                 <tr th:if="${#lists.isEmpty(empsNoDept)}">
                                     <td colspan="4" style="text-align:center;">모든 사원이 부서에 배정되어 있습니다.</td>
