--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,7 +5,7 @@
             <h2>{LOGO}</h2>
         </div>
         <div class="header-right">
-            <span class="user-info">{000님}</span>
+            <span class="user-info" th:text="'사원번호: ' + ${session.loginAccount.empCode}">000님</span>
         </div>
     </header>
 </div>
