--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -35,7 +35,7 @@ main {
     left: 0;
     right: 0;
     height: 60px;
-    background-color: #4565d0;
+    background-color: #0066b3;
     color: #fff;
     display: flex;
     justify-content: space-between;
