--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
     <header class="top-header">
         <div class="header-left">
 <!--            <img src="/images/logo2.png" alt="회사 로고" class="sidebar-logo" />-->
-            <h2>{LOGO}</h2>
+            <h2><a href="/home">{LOGO}</a></h2>
         </div>
         <div class="header-right">
             <span class="user-info" th:text="'사원번호: ' + ${session.loginAccount.empCode}">000님</span>
