일반 근태 신청 삭제 로직 구현

--- a/src/main/resources/templates/att/general.html
+++ b/src/main/resources/templates/att/general.html
@@ -154,6 +154,11 @@
             const workDate = document.querySelector('#workDate').value;
             submitDelete('/att/delete', workDate);
         });
+        // 상신 버튼 (POST /att/request)
+        document.getElementById('btnRequest').addEventListener('click', () => {
+            const workDate = document.querySelector('#workDate').value;
+            submitDelete('/att/request', workDate);
+        });
     });
 </script>
 
